--- a/frontend/index.html
+++ b/frontend/index.html
@@ -360,7 +360,7 @@
 
     <!-- API Key Modal -->
     <div id="apiKeyModal" class="modal">
-        <div class="modal-content" style="max-width: 500px;">
+        <div class="modal-content">
             <div class="modal-header">
                 <h2>Enter API Key</h2>
                 <span class="close" onclick="closeApiKeyModal()">&times;</span>
@@ -374,22 +374,29 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <label for="apiKeyInput">API Key:</label>
-                    <input type="password" id="apiKeyInput" placeholder="Enter your API key..." required>
+                    <label for="apiKeyModel">Model:</label>
+                    <select id="apiKeyModel">
+                        <option value="gpt-3.5-turbo">gpt-3.5-turbo</option>
+                        <option value="gpt-4">gpt-4</option>
+                        <option value="gpt-4o">gpt-4o</option>
+                    </select>
                 </div>
                 <div class="form-group">
-                    <label for="saveApiKey">
-                        <input type="checkbox" id="saveApiKey"> Save API key for this session
-                    </label>
+                    <label for="apiKeyInput">API Key:</label>
+                    <input type="password" id="apiKeyInput" placeholder="Enter your API key" required>
                 </div>
-                <div class="form-actions">
-                    <button type="button" class="btn btn-primary" onclick="saveApiKeyAndClose()">Continue</button>
-                    <button type="button" class="btn btn-secondary" onclick="closeApiKeyModal()">Cancel</button>
-                </div>
+                <button type="button" class="btn btn-primary" onclick="saveApiKeyAndClose()">Save API Key</button>
             </div>
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <!-- Load modules in order -->
+    <script src="js/modules/auth.js"></script>
+    <script src="js/modules/file-manager.js"></script>
+    <script src="js/modules/editor-manager.js"></script>
+    <script src="js/modules/chat-manager.js"></script>
+    <script src="js/modules/search-manager.js"></script>
+    <script src="js/modules/panel-manager.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
