--- a/frontend/index.html
+++ b/frontend/index.html
@@ -397,6 +397,7 @@
     <script src="js/modules/chat-manager.js"></script>
     <script src="js/modules/search-manager.js"></script>
     <script src="js/modules/panel-manager.js"></script>
+    <script src="js/modules/terminal-manager.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
